Fixed Print Tickets View Alignment
It took me like 5 minutes...

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -357,6 +357,88 @@ form.placament-form .store-interactions-div .label-divider > input {
   }
 }
 
+form.print-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+form.print-form .store-interactions-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 0;
+  font-weight: bold;
+  margin-bottom: 8px;
+  line-height: 2.5rem;
+  font-size: 1.2rem;
+}
+
+form.print-form .store-interactions-div > input {
+  margin-right: 16px;
+}
+
+form.print-form .store-interactions-div > label {
+  margin-right: 16px;
+}
+
+form.print-form .store-interactions-div .label-divider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+form.print-form .store-interactions-div .label-divider > input {
+  margin-right: 16px;
+}
+
+@media (max-width: 768px) {
+  form.print-form .store-interactions-div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: none;
+        -ms-flex-align: none;
+            align-items: none;
+  }
+}
+
+@media (max-width: 768px) {
+  form.print-form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  form.print-form button {
+    margin-top: 16px;
+  }
+}
+
 header {
   background: #fafafa;
   height: 80px;
